[package]
name = "ttl_trigger_cli"
authors = ["Cody Nhan Pham"]
organization = "Oviedo Lab"
description = "A command line tool to send TTL triggers through a serial port."
license = "MIT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
serialport = "4.3.0"
colored = "2.1.0"

[profile.release]
opt-level = "z"
lto = true